--- a/pagepeach/template/index.html
+++ b/pagepeach/template/index.html
@@ -11,9 +11,11 @@
 </head>
 
 <body>
-    <nav>
-        <h1>{{ title }}</h1>
+    <header>
+        <p class="title">{{ title }}</p>
+    </header>
 
+    <nav>
         <section>
             {% for page in sitemap if page.type == "page" %}
             {{ includes.nav_page(page) }}
