Add base_url parameter

--- a/pagepeach/template/index.html
+++ b/pagepeach/template/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="{{ get_url('style.css', config) }}">
 </head>
 
 <body>
@@ -18,7 +18,7 @@
     <nav>
         <section>
             {% for page in sitemap if page.type == "page" %}
-            {{ includes.nav_page(page) }}
+            {{ includes.nav_page(page, config) }}
             {% endfor %}
         </section>
 
@@ -27,7 +27,7 @@
             <p class="section-title">{{ section.title }}</p>
 
             {% for page in section.children %}
-            {{ includes.nav_page(page) }}
+            {{ includes.nav_page(page, config) }}
             {% endfor %}
         </section>
         {% endfor %}
