--- a/pagepeach/template/includes.jinja
+++ b/pagepeach/template/includes.jinja
@@ -1,3 +1,3 @@
-{% macro nav_page(page) %}
-<a class="page-link" href="{{ page.path }}">{{ page.title }}</a>
+{% macro nav_page(page, config) %}
+<a class="page-link" href="{{ get_url(page.path, config) }}">{{ page.title }}</a>
 {% endmacro %}
