--- a/pagepeach/template/index.html
+++ b/pagepeach/template/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <header>
-        <p class="title">{{ title }}</p>
+        <p class="title">{{ config.general.name }}</p>
     </header>
 
     <nav>
