--- a/pagepeach/template/style.css
+++ b/pagepeach/template/style.css
@@ -69,6 +69,10 @@ nav .page-link:hover {
     background: var(--primary-color-light);
 }
 
+nav .page-link.active {
+    color: var(--primary-color);
+}
+
 main {
     grid-area: main;
     padding: 25px;
