--- a/pagepeach/template/style.css
+++ b/pagepeach/template/style.css
@@ -31,11 +31,18 @@ header {
 
     display: grid;
     place-items: center start;
+    grid-template-columns: 1fr auto;
 }
 
 header .title {
     font-size: 1.5em;
     margin: 0;
+}
+
+header .links a {
+    color: white;
+    text-transform: uppercase;
+    margin: 0 10px;
 }
 
 nav {
